fix: propagate usage of custom scrollbar

--- a/src/js/components/edit-window/index.css
+++ b/src/js/components/edit-window/index.css
@@ -1,3 +1,25 @@
+dialog.use-custom-scrollbar::-webkit-scrollbar {
+  width: calc(0.5rem + var(--small));
+  height: var(--small);
+}
+
+dialog.use-custom-scrollbar::-webkit-scrollbar-thumb {
+  background: var(--fg-mid);
+  border: var(--fg-light-alpha) solid thin;
+  border-radius: var(--medium);
+}
+
+dialog.use-custom-scrollbar::-webkit-scrollbar-track {
+  background-color: inherit;
+}
+
+/* Turn on single button up on top, and down on bottom */
+dialog.use-custom-scrollbar::-webkit-scrollbar-button:start:decrement,
+dialog.use-custom-scrollbar::-webkit-scrollbar-button:end:increment {
+  display: block;
+  height: var(--medium);
+}
+
 p {
   margin: 0;
 }
@@ -10,9 +32,12 @@ dialog {
   color: var(--fg-mid);
   margin: auto;
   padding: var(--large);
-  box-shadow: 0 var(--medium) var(--large) var(--fg-mid);
+  box-shadow: 0 var(--medium) var(--large) #171717;
   border-radius: var(--medium);
   border: none;
+
+  width: 90vw;
+  height: 90vh;
 }
 
 dialog::backdrop {
